# uol-cm2005-2025-mid

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  REFACTORING_COMPLETION_PROOF.md  REFACTORING_SUMMARY.md
data/: 20200317.csv
include/: actions.hpp  app_constants.hpp  io.hpp  menu_node.hpp  menu_renderer.hpp  service_container.hpp  service_not_registered_exception.hpp
include/actions/: auto_generate_trades_action.hpp  candlestick_summary_action.hpp  print_hello_action.hpp  product_query_action.hpp  show_version_action.hpp  user_register_action.hpp  user_reset_action.hpp  wallet_deposit_action.hpp  wallet_view_balance_action.hpp  wallet_withdraw_action.hpp
include/core/: service_container.hpp
include/dto/: activity_summary.hpp  candlestick_query.hpp  constants.hpp  empty_request.hpp  generation_request.hpp  product_query.hpp  transaction_query.hpp  user_login.hpp  user_registration.hpp  user_remind_username.hpp  user_reset.hpp  wallet_operation.hpp
include/io/: input.hpp  standard_input.hpp  standard_output.hpp
include/menu/: menu_builder.hpp  menu_engine.hpp  menu_input.hpp  menu_node.hpp  menu_renderer.hpp
include/persistence/: base_data_adapter.hpp  credentials_data_adapter.hpp  trading_data_adapter.hpp  (+3 more)
src/: CMakeLists.txt  actions.cpp  io.cpp  main.cpp  menu_node.cpp  menu_renderer.cpp  service_container.cpp
src/actions/: auto_generate_trades_action.cpp  candlestick_summary_action.cpp  print_hello_action.cpp  product_query_action.cpp  show_version_action.cpp  transaction_activity_summary_action.cpp  transaction_show_by_pair_action.cpp  transaction_show_last5_action.cpp  user_login_action.cpp  user_register_action.cpp  user_reset_action.cpp  wallet_deposit_action.cpp  wallet_view_balance_action.cpp  wallet_withdraw_action.cpp
src/actions/generation/: auto_generate_trades_action.cpp
src/actions/summary/: candlestick_summary_action.cpp
src/actions/trading/: trading_simulation_action.cpp  trading_stub_action.cpp
src/actions/transaction/: transaction_activity_summary_action.cpp  transaction_show_by_currency_action.cpp  transaction_show_by_pair_action.cpp  transaction_show_last5_action.cpp
src/actions/user/: user_login_action.cpp  user_logoff_action.cpp  user_register_action.cpp  user_remind_username_action.cpp  user_reset_action.cpp
src/actions/wallet/: wallet_deposit_action.cpp  wallet_view_balance_action.cpp  wallet_withdraw_action.cpp
src/core/: service_container.cpp
src/core/actions/: action_helper.cpp
src/core/data/: csv_reader.cpp  csv_types.cpp  csv_writer.cpp
src/core/ui/form/: data_source.cpp  form.cpp  form_builder.cpp  form_context.cpp  menu_form_input_provider.cpp  static_data_source.cpp  validator_factory.cpp
src/core/ui/form/fields/: selection_field.cpp  text_field.cpp
src/core/ui/io/: standard_input.cpp  standard_output.cpp
src/core/ui/menu/: menu_builder.cpp  menu_engine.cpp  menu_input.cpp  menu_node.cpp  menu_renderer.cpp
src/core/utils/: date_filter.cpp  output_formatter.cpp  service_utils.cpp  time_utils.cpp
src/forms/candlestick/: candlestick_form.cpp  candlestick_form_data_provider.cpp
src/forms/candlestick/fields/: asks_bids_field.cpp  currency_pair_field.cpp  end_date_field.cpp  start_date_field.cpp  timeframe_field.cpp
src/forms/product_query/: product_query_form.cpp  product_query_form_factory.cpp
src/forms/product_query/binders/: field_binders.cpp
src/forms/product_query/fields/: currency_pair_field.cpp  end_date_field.cpp  query_type_field.cpp  start_date_field.cpp  timeframe_field.cpp
src/forms/product_query/validators/: currency_pair_validator.cpp
src/forms/shared/fields/: currency_field.cpp  date_fields.cpp  password_field.cpp  product_pair_field.cpp  timeframe_field.cpp
src/forms/shared/validators/: currency_pair_validator.cpp  currency_validator.cpp  date_validator.cpp
src/forms/transaction/: activity_summary_form.cpp  activity_summary_form_data_provider.cpp  currency_form.cpp  product_pair_form.cpp
src/forms/transaction/fields/: currency_field.cpp  end_date_field.cpp  product_pair_field.cpp  start_date_field.cpp  timeframe_field.cpp
src/forms/user/: login_form.cpp  registration_form.cpp  remind_username_form.cpp  reset_form.cpp
src/forms/user/fields/: email_field.cpp  email_or_username_field.cpp  full_name_field.cpp  login_email_field.cpp  login_password_field.cpp  login_username_field.cpp  new_password_field.cpp  password_field.cpp  remind_email_field.cpp  reset_email_field.cpp  reset_username_field.cpp  username_field.cpp
src/forms/user/validators/: email_or_username_validator.cpp  email_validator.cpp  full_name_validator.cpp  password_validator.cpp  user_validators.cpp  username_validator.cpp
src/forms/wallet/: wallet_operation_form.cpp
src/forms/wallet/fields/: amount_field.cpp  currency_field.cpp
src/forms/wallet/validators/: amount_validator.cpp  currency_validator.cpp
src/io/: standard_input.cpp  standard_output.cpp
src/menu/: menu_builder.cpp  menu_engine.cpp  menu_input.cpp  menu_node.cpp  menu_renderer.cpp
src/persistence/: credentials_data_adapter.cpp  trading_data_adapter.cpp  transaction_data_adapter.cpp  user_data_adapter.cpp  wallet_data_adapter.cpp
src/product_query/: product_query_form.cpp
src/product_query/binders/: field_binders.cpp
src/product_query/fields/: currency_pair_field.cpp  end_date_field.cpp  query_type_field.cpp  start_date_field.cpp  timeframe_field.cpp
src/product_query/validators/: currency_pair_validator.cpp
src/services/: analytic_service.cpp  credentials_service.cpp  trading_activities_service.cpp  trading_service.cpp  transactions_service.cpp  user_registration_service.cpp  user_service.cpp  wallet_service.cpp
tests/: CMakeLists.txt  test_candlestick_service_e2e.cpp  test_credentials_user_id_e2e.cpp  test_currency_pair_validator.cpp  test_form_read_retries.cpp  test_full_name_validator.cpp  test_menu_auth_visibility.cpp  test_timeframe_date_binders.cpp  test_timestamp_parser.cpp  test_trading_simulation_initial_balances_e2e.cpp  test_transactions_activity_summary_e2e.cpp  test_username_validator.cpp
(+133 files in other folders)
